# k8s-custom-metrics-apiserver-rs

./: Cargo.toml
src/: custom.rs  external.rs  lib.rs  pkg.rs
src/pkg/: labels.rs  selection.rs  types.rs
src/pkg/runtime/: schema.rs
