[package]
name = "k8s-custom-metrics-apiserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.17", features = ["v1_26"] }
k8s-metrics = { version = "0.11" }
# k8s-metrics = "0.10"
